# master_thesis_bioinformatics

./: README.md  environment_Rubens.yml  environment_biolord.yml  environment_crispykc.yml  environment_mefisto.yml
MEFISTO/: top_genes_per_pc.csv
Rubens/code/: biased_models.ipynb  comparison_best_models.ipynb  elitism_generation.py  genetic_algorithm_full_crossover_generation.py  genetic_algorithm_partial_crossover_generation.py  initial_exploration.ipynb  random_model_generation.py  visualization_elitism.ipynb  visualization_genetic_algorithm.ipynb
Rubens/code/general_functions/: model_generation_functions.py  model_visualization_functions.py
biolord/code/: biolord_synthetic_data.ipynb
data_preprocessing/: .gitignore  README.md  dependencies.md  develop.md  pyproject.toml  requirements.txt
data_preprocessing/code/perturbseq/post_cellranger_processing/cellmarkers/: markers_cellTypes_HCA.xlsx
data_preprocessing/code/perturbseq/post_cellranger_processing/cellmarkers/cell_cycle/: mouse_cell_cycle_markers.xlsx
data_preprocessing/code/perturbseq/preprocessing/: download_fastq.sh  genome.py
data_preprocessing/src/crispyKC/: __init__.py
data_preprocessing/src/crispyKC/utils/: paths.py
synthetic_data_generation_script/: synthetic_data_generation.ipynb
